* fixed wrong JS naming in calendar.eventEdit * fixed not-working refresh after event deletion * fixed wrong coloring of event titles in week view

--- a/assets/css/event.css
+++ b/assets/css/event.css
@@ -23,7 +23,6 @@
 	line-height:normal;
 	text-align:left;
 	white-space:nowrap;
-	color:#fff;
 }
 
 .dayMode .event dd,
